--- a/Notebooks/12c_h.ipynb
+++ b/Notebooks/12c_h.ipynb
@@ -7,14 +7,23 @@
    "outputs": [],
    "source": [
     "initial_path = 'peptide-QML'\n",
-    "initial_path = '..'"
+    "# initial_path = '..'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import sys\n",
@@ -33,35 +42,158 @@
    "outputs": [],
    "source": [
     "# name of the notebook\n",
-    "name_notebook = \"test_12c_h\""
+    "name_notebook = \"sweep_12c_h\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'my_code.helper_classes' has no attribute 'Sweep'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-5def59f64b56>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m sweep = c.Sweep(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mname_notebook\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdescription\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Sweep of optimizers and learning rates for 12c_h (3 layers)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mptm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mptm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1e-1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5e-2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1e-2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5e-3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5e-4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5e-5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'my_code.helper_classes' has no attribute 'Sweep'"
+     ]
+    }
+   ],
    "source": [
-    "# Define the model\n",
-    "class Model(ptm.Model):\n",
-    "    def __init__(self):\n",
-    "        super(Model, self).__init__()\n",
-    "        self.pre_quantum = ptm.nn.Linear(228, 228//2)\n",
-    "        self.fc2 = ptm.nn.Linear(228//2, 12)\n",
-    "        self.fc3 = ptm.nn.Linear(12, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = ptm.torch.relu(self.fc1(x))\n",
-    "        x = ptm.torch.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
-    "        return x\n",
-    "\n",
-    "model = Model()\n"
+    "sweep = c.Sweep(\n",
+    "    name_notebook, \n",
+    "    description=\"Sweep of optimizers and learning rates for 12c_h (3 layers)\",\n",
+    "    optimizer=[ptm.optim.Adam, ptm.optim.SGD],\n",
+    "    lr=[1e-1, 5e-2, 1e-2, 5e-3, 1e-3, 5e-4, 1e-4, 5e-5],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep.save(\n",
+    "        file_name='sweep_12c_h', #TODO: automatic-> version\n",
+    "        initial_path=initial_path\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'idx': 0, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.1}\n",
+      "{'idx': 1, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.05}\n",
+      "{'idx': 2, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.01}\n",
+      "{'idx': 3, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.005}\n",
+      "{'idx': 4, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.001}\n",
+      "{'idx': 5, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.0005}\n",
+      "{'idx': 6, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 0.0001}\n",
+      "{'idx': 7, 'optimizer': <class 'torch.optim.adam.Adam'>, 'lr': 5e-05}\n",
+      "{'idx': 8, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.1}\n",
+      "{'idx': 9, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.05}\n",
+      "{'idx': 10, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.01}\n",
+      "{'idx': 11, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.005}\n",
+      "{'idx': 12, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.001}\n",
+      "{'idx': 13, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.0005}\n",
+      "{'idx': 14, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 0.0001}\n",
+      "{'idx': 15, 'optimizer': <class 'torch.optim.sgd.SGD'>, 'lr': 5e-05}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sweep_point in sweep:\n",
+    "    # Define the model\n",
+    "    class Model(ptm.Model):\n",
+    "        def __init__(self):\n",
+    "            super(Model, self).__init__()\n",
+    "            self.pre_quantum = ptm.nn.Linear(228, 228//2)\n",
+    "            self.fc2 = ptm.nn.Linear(228//2, 12)\n",
+    "            self.fc3 = ptm.nn.Linear(12, 1)\n",
+    "\n",
+    "        def forward(self, x):\n",
+    "            x = ptm.torch.sigmoid(self.fc1(x))\n",
+    "            x = ptm.torch.sigmoid(self.fc2(x))\n",
+    "            x = self.fc3(x)\n",
+    "            return x\n",
+    "\n",
+    "    model = Model()\n",
+    "\n",
+    "    # set the name and path of the model\n",
+    "    model.set_name_and_path(name_notebook, initial_path)\n",
+    "\n",
+    "    # train the model \n",
+    "    model.optimize_params(\n",
+    "        #save info\n",
+    "        save_model_info = True,\n",
+    "        description = 'test with 12 amino acids and clasical QML',    \n",
+    "        #data\n",
+    "        data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12'),\n",
+    "        # train options\n",
+    "        optimizer = sweep_point['optimizer'],\n",
+    "        optimizer_options = {'lr': sweep_point['lr']},\n",
+    "        num_epochs = 6,                \n",
+    "        batch_size = 32,\n",
+    "        # early stopping options\n",
+    "        stop_training_options = {\n",
+    "            'lookback_epochs': 3, \n",
+    "            'threshold_slope': 0.001,\n",
+    "            'threshold_std_dev': 0.2\n",
+    "        },\n",
+    "        # metadata\n",
+    "        metadata = {\n",
+    "            'sweep_point': sweep_point,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    # -- ADD INFO TO SWEEP -- #\n",
+    "    sweep.add_info(\n",
+    "        idx=sweep_point['idx'],\n",
+    "        best_loss_train=model.results.loss_epoch.best,\n",
+    "        best_loss_test=model.results.loss_validation_epoch.best,\n",
+    "        loss_validation=model.results.mean_loss_validation,\n",
+    "        time_train=model.results.time_epoch.last,\n",
+    "    )\n",
+    "    sweep.save(\n",
+    "        file_name='sweep_12c_h', #TODO: automatic-> version\n",
+    "        initial_path=initial_path\n",
+    "    )\n",
+    "\n",
+    "    # -- VALIDATION and PLOTS -- #\n",
+    "    model.plot_losses(fig_size=(6,6))\n",
+    "    model.validate(\n",
+    "        pct=1,\n",
+    "        add_to_results=True,\n",
+    "        plot=True,\n",
+    "        print_items=False\n",
+    "    )\n",
+    "\n",
+    "    # -- SAVE -- #\n",
+    "    model.save_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,39 +213,11 @@
      ]
     }
    ],
-   "source": [
-    "# set the name and path of the model\n",
-    "model.set_name_and_path(name_notebook, initial_path)\n",
-    "\n",
-    "# train the model \n",
-    "model.optimize_params(\n",
-    "    #save info\n",
-    "    save_model_info = True,\n",
-    "    description = 'test with 12 amino acids and clasical QML',    \n",
-    "    #data\n",
-    "    data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12'),\n",
-    "    # train options\n",
-    "    optimizer= ptm.optim.Adam,\n",
-    "    optimizer_options={'lr': 0.02},\n",
-    "    num_epochs = 2,                \n",
-    "    batch_size = 40,\n",
-    "    # early stopping options\n",
-    "    stop_training_options = {\n",
-    "        'lookback_epochs': 5, \n",
-    "        'threshold_slope': 0.001,\n",
-    "        'threshold_std_dev': 0.2\n",
-    "    },\n",
-    "    # metadata\n",
-    "    metadata = {\n",
-    "        'test': 'test description',\n",
-    "        'author': 'Raul Conchello',\n",
-    "    }\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,15 +251,11 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# -- VALIDATION -- #\n",
-    "\n",
-    "model.plot_losses(fig_size=(3,3))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -183,18 +283,11 @@
      ]
     }
    ],
-   "source": [
-    "model.validate(\n",
-    "    pct=1,\n",
-    "    add_to_results=True,\n",
-    "    plot=True,\n",
-    "    print_items=False\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,15 +298,11 @@
      ]
     }
    ],
-   "source": [
-    "# -- SAVE -- #\n",
-    "\n",
-    "model.save_results()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,9 +323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PennyLane",
+   "display_name": "JL_Pennylane",
    "language": "python",
-   "name": "python3"
+   "name": "jl_pennylane"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
