--- a/Notebooks/tests.ipynb
+++ b/Notebooks/tests.ipynb
@@ -402,6 +402,96 @@
     "}.items()))\n",
     "x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'idx': 0, 'a': 1, 'b': 4}\n",
+      "{'idx': 1, 'a': 1, 'b': 2, 'loss': 0.1, 'acc': 0.9}\n",
+      "{'idx': 2, 'a': 1, 'b': 1}\n",
+      "{'idx': 3, 'a': 2, 'b': 4}\n",
+      "{'idx': 4, 'a': 2, 'b': 2}\n",
+      "{'idx': 5, 'a': 2, 'b': 1}\n",
+      "{'idx': 6, 'a': 3, 'b': 4}\n",
+      "{'idx': 7, 'a': 3, 'b': 2}\n",
+      "{'idx': 8, 'a': 3, 'b': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "from itertools import product\n",
+    "\n",
+    "class sweep:\n",
+    "    def __init__(self, name_notebook, **params):\n",
+    "        self.name_notebook = name_notebook\n",
+    "        self.uuid = uuid.uuid4()\n",
+    "        self.params = params        \n",
+    "        self.points = list(product(*params.values()))\n",
+    "        self.n_points = len(self.points)\n",
+    "\n",
+    "        self.added_info = {k: {} for k in range(0, self.n_points)}\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        for index, point in enumerate(self.points):\n",
+    "            yield {'idx': index, **dict(zip(self.params.keys(), point))}\n",
+    "\n",
+    "    def get_iter_with_info(self):\n",
+    "        for index, point in enumerate(self.points):\n",
+    "            yield {'idx': index, **dict(zip(self.params.keys(), point)), **self.added_info[index]}\n",
+    "\n",
+    "    def add_info(self, idx, **info):\n",
+    "        self.added_info[idx].update(info)\n",
+    "\n",
+    "    def get_info(self, idx):\n",
+    "        return self.added_info[idx]\n",
+    "    \n",
+    "    def save(self):\n",
+    "        with open(f'{self.name_notebook}.pickle', 'wb') as handle:\n",
+    "            pickle.dump(self, handle, )\n",
+    "\n",
+    "# Test\n",
+    "s = sweep('test_notebook', a=[1,2,3], b=[4,2,1])\n",
+    "s.add_info(1, loss=0.1, acc=0.9)\n",
+    "for x in s.get_iter_with_info():\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = {'a': 1, 'b': 2}\n",
+    "x.update({'b': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 3}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
   }
  ],
  "metadata": {
