--- a/Notebooks/sweep_12c_h.ipynb
+++ b/Notebooks/sweep_12c_h.ipynb
@@ -25,14 +25,13 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import sys\n",
     "sys.path.append(initial_path)\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from my_code import helper_classes as c\n",
-    "from my_code import pytorch_model as ptm"
+    "from my_code import pytorch_model as m"
    ]
   },
   {
@@ -54,8 +53,8 @@
     "sweep = c.Sweep(\n",
     "    name_notebook, \n",
     "    initial_path=initial_path,\n",
-    "    description=\"Sweep of optimizers and learning rates for 12c_h (3 layers)\",\n",
-    "    optimizer=[ptm.optim.Adam, ptm.optim.SGD],\n",
+    "    description=\"hot encoding classical network of 3 layers\",\n",
+    "    optimizer=[m.optim.Adam, m.optim.SGD],\n",
     "    lr=[1e-1, 5e-2, 1e-2, 5e-3, 1e-3, 5e-4, 1e-4, 5e-5],\n",
     ")"
    ]
@@ -528,16 +527,16 @@
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
     "\n",
     "    # -- MODEL -- #\n",
-    "    class Model(ptm.Model):\n",
+    "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
-    "            self.fc1 = ptm.nn.Linear(228, 228//2)\n",
-    "            self.fc2 = ptm.nn.Linear(228//2, 12)\n",
-    "            self.fc3 = ptm.nn.Linear(12, 1)\n",
+    "            self.fc1 = m.nn.Linear(228, 228//2)\n",
+    "            self.fc2 = m.nn.Linear(228//2, 12)\n",
+    "            self.fc3 = m.nn.Linear(12, 1)\n",
     "\n",
     "        def forward(self, x):\n",
-    "            x = ptm.torch.sigmoid(self.fc1(x))\n",
-    "            x = ptm.torch.sigmoid(self.fc2(x))\n",
+    "            x = m.torch.sigmoid(self.fc1(x))\n",
+    "            x = m.torch.sigmoid(self.fc2(x))\n",
     "            x = self.fc3(x)\n",
     "            return x\n",
     "\n",
