--- a/Notebooks/sweep_12h_h_Xqm.ipynb
+++ b/Notebooks/sweep_12h_h_Xqm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(initial_path)\n",
@@ -22,37 +31,39 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from my_code import helper_classes as c\n",
-    "from my_code import pytorch_model as m"
+    "from my_code import pytorch_model as m\n",
+    "from my_code import quantum_nodes as q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# name of the notebook\n",
-    "name_notebook = \"sweep_12c_h\""
+    "name_notebook = \"sweep_12h_h_Xqm\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sweep = c.Sweep(\n",
     "    name_notebook, \n",
     "    initial_path=initial_path,\n",
-    "    description=\"hot encoding classical network of 3 layers\",\n",
-    "    optimizer=[m.optim.Adam, m.optim.SGD],\n",
-    "    lr=[1e-1, 5e-2, 1e-2, 5e-3, 1e-3, 5e-4, 1e-4, 5e-5],\n",
+    "    description=\"Try to find the best measurement and number of layers for the quantum block.\",\n",
+    "    qubits_measurement=[1, 'A'],\n",
+    "    n_layers_quantum_block=[1,2,5,12,20],\n",
+    "    repetitions=list(range(1, 3)),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +72,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " --- SWEEP POINT 0/20 --- \n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'optimizer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-714f255861e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'PET_SCORES_12'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;31m# train options\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msweep_point\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'optimizer'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m         \u001b[0moptimizer_options\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msweep_point\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0mnum_epochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'optimizer'"
+     ]
+    }
+   ],
    "source": [
     "for sweep_point in sweep:\n",
     "\n",
     "    # print the point of the sweep\n",
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
+    "\n",
+    "    # -- QUANTUM BLOCK -- #\n",
+    "    n_qubits = 12\n",
+    "    quantum_layer = q.circuit(\n",
+    "        n_qubits = n_qubits, \n",
+    "        device = \"default.qubit.torch\",\n",
+    "        device_options = {'shots': None},\n",
+    "        embedding = q.parts.AngleEmbedding, \n",
+    "        # embedding_ansatz = q.parts.Ansatz_11,\n",
+    "        block_ansatz = q.parts.Ansatz_11,\n",
+    "        final_ansatz = q.parts.Ansatz_11,\n",
+    "        measurement = q.parts.Measurement('Z', sweep_point['qubits_measurement']),\n",
+    "        # embedding_n_layers = 4,\n",
+    "        # different_inputs_per_layer = True,\n",
+    "        block_n_layers = sweep_point['n_layers_quantum_block'],\n",
+    "        # wrapper_qlayer = pw.QLayerEmpty,\n",
+    "    )\n",
     "\n",
     "    # -- MODEL -- #\n",
     "    class Model(m.Model):\n",
@@ -76,6 +123,7 @@
     "            super(Model, self).__init__()\n",
     "            self.fc1 = m.nn.Linear(228, 228//2)\n",
     "            self.fc2 = m.nn.Linear(228//2, 12)\n",
+    "            self.quantum_block = ''\n",
     "            self.fc3 = m.nn.Linear(12, 1)\n",
     "\n",
     "        def forward(self, x):\n",
@@ -103,8 +151,8 @@
     "        #data\n",
     "        data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12'),\n",
     "        # train options\n",
-    "        optimizer = sweep_point['optimizer'],\n",
-    "        optimizer_options = {'lr': sweep_point['lr']},\n",
+    "        optimizer = m.optim.Adam,\n",
+    "        optimizer_options = {'lr': 0.01},\n",
     "        num_epochs = 2,                \n",
     "        batch_size = 32,\n",
     "        # early stopping options\n",
