--- a/Notebooks/sweep_12h_h_Xqm.ipynb
+++ b/Notebooks/sweep_12h_h_Xqm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,81 +55,192 @@
     "    name_notebook, \n",
     "    initial_path=initial_path,\n",
     "    description=\"Try to find the best measurement and number of layers for the quantum block.\",\n",
-    "    qubits_measurement=[1, 'A'],\n",
-    "    n_layers_quantum_block=[1,2,5,12,20],\n",
+    "    qubits_measurement=[1, 'all'],\n",
+    "    n_layers_quantum_block=[0,1,2,5,12,20],\n",
     "    repetitions=list(range(1, 3)),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
     "sweep.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "n_qubits = 12\n",
+    "quantum_layer = q.circuit(\n",
+    "    n_qubits = n_qubits, \n",
+    "    device = \"default.qubit.torch\",\n",
+    "    device_options = {'shots': None},\n",
+    "    embedding = q.parts.AngleEmbedding, \n",
+    "    # embedding_ansatz = q.parts.Ansatz_11,\n",
+    "    block_ansatz = q.parts.Ansatz_11,\n",
+    "    final_ansatz = q.parts.Ansatz_11,\n",
+    "    measurement = q.parts.Measurement('Z', 1),\n",
+    "    # embedding_n_layers = 4,\n",
+    "    # different_inputs_per_layer = True,\n",
+    "    block_n_layers = 2,\n",
+    "    # wrapper_qlayer = pw.QLayerEmpty,\n",
+    ")\n",
+    "# -- MODEL -- #\n",
+    "class Model(m.Model):\n",
+    "    def __init__(self):\n",
+    "        super(Model, self).__init__()\n",
+    "        n_qubits_measured = 12 \n",
+    "        self.fc1 = m.nn.Linear(228, 228//2)\n",
+    "        self.fc2 = m.nn.Linear(228//2, 12)\n",
+    "        self.fc3 = quantum_layer() if quantum_layer is not None else None\n",
+    "        self.fc4 = m.nn.Linear(n_qubits_measured, n_qubits_measured) \n",
+    "        self.fc5 = m.nn.Linear(n_qubits_measured, 1)\n",
+    "        self.quantum_layer = quantum_layer\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = m.torch.sigmoid(self.fc1(x))\n",
+    "        x = m.torch.sigmoid(self.fc2(x))\n",
+    "        if self.fc3 is not None:\n",
+    "            x = self.fc3(x)\n",
+    "        x = m.torch.sigmoid(self.fc4(x))\n",
+    "        x = self.fc5(x)\n",
+    "        return x\n",
+    "\n",
+    "model = Model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " --- SWEEP POINT 0/20 --- \n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'optimizer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-714f255861e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'PET_SCORES_12'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;31m# train options\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msweep_point\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'optimizer'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m         \u001b[0moptimizer_options\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msweep_point\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0mnum_epochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'optimizer'"
+      "Model(\n",
+      "  (fc1): Linear(in_features=228, out_features=114, bias=True)\n",
+      "  (fc2): Linear(in_features=114, out_features=12, bias=True)\n",
+      "  (fc3): <Quantum Torch Layer: func=circuit>\n",
+      "  (fc4): Linear(in_features=12, out_features=12, bias=True)\n",
+      "  (fc5): Linear(in_features=12, out_features=1, bias=True)\n",
+      ");\n",
+      "Quantum layer: QLayer(\n",
+      "\t\tn_qubits: 12\n",
+      "\t\tembedding: AngleEmbedding\n",
+      "\t\tembedding_ansatz: None\n",
+      "\t\tblock_ansatz: Ansatz_11\n",
+      "\t\tmeasurement: Measurement('Z', 1)\n",
+      "\t\tembedding_n_layers: 0\n",
+      "\t\tdifferent_inputs_per_layer: False\n",
+      "\t\tblock_n_layers: 2\n",
+      "\t\twrapper_qlayer: None\n",
+      "\t\tdevice: \n",
+      "\t\t\tDefault qubit (Torch) PennyLane plugin\n",
+      "\t\t\tShort name: default.qubit.torch\n",
+      "\t\t\tPackage: pennylane\n",
+      "\t\t\tPlugin version: 0.31.0\n",
+      "\t\t\tAuthor: Xanadu Inc.\n",
+      "\t\t\tWires: 12\n",
+      "\t\t\tShots: None\n",
+      ")\n"
      ]
     }
    ],
+   "source": [
+    "print(str(model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model(\n",
+      "  (fc1): Linear(in_features=228, out_features=114, bias=True)\n",
+      "  (fc2): Linear(in_features=114, out_features=12, bias=True)\n",
+      "  (fc3): <Quantum Torch Layer: func=circuit>\n",
+      "  (fc4): Linear(in_features=12, out_features=12, bias=True)\n",
+      "  (fc5): Linear(in_features=12, out_features=1, bias=True)\n",
+      ");\n",
+      "Quantum layer: QLayer(\n",
+      "\t\tn_qubits: 12\n",
+      "\t\tembedding: AngleEmbedding\n",
+      "\t\tembedding_ansatz: None\n",
+      "\t\tblock_ansatz: Ansatz_11\n",
+      "\t\tmeasurement: Measurement('Z', 1)\n",
+      "\t\tembedding_n_layers: 0\n",
+      "\t\tdifferent_inputs_per_layer: False\n",
+      "\t\tblock_n_layers: 2\n",
+      "\t\twrapper_qlayer: None\n",
+      "\t\tdevice: \n",
+      "\t\t\tDefault qubit (Torch) PennyLane plugin\n",
+      "\t\t\tShort name: default.qubit.torch\n",
+      "\t\t\tPackage: pennylane\n",
+      "\t\t\tPlugin version: 0.31.0\n",
+      "\t\t\tAuthor: Xanadu Inc.\n",
+      "\t\t\tWires: 12\n",
+      "\t\t\tShots: None\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.__str__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for sweep_point in sweep:\n",
     "\n",
     "    # print the point of the sweep\n",
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
     "\n",
-    "    # -- QUANTUM BLOCK -- #\n",
-    "    n_qubits = 12\n",
-    "    quantum_layer = q.circuit(\n",
-    "        n_qubits = n_qubits, \n",
-    "        device = \"default.qubit.torch\",\n",
-    "        device_options = {'shots': None},\n",
-    "        embedding = q.parts.AngleEmbedding, \n",
-    "        # embedding_ansatz = q.parts.Ansatz_11,\n",
-    "        block_ansatz = q.parts.Ansatz_11,\n",
-    "        final_ansatz = q.parts.Ansatz_11,\n",
-    "        measurement = q.parts.Measurement('Z', sweep_point['qubits_measurement']),\n",
-    "        # embedding_n_layers = 4,\n",
-    "        # different_inputs_per_layer = True,\n",
-    "        block_n_layers = sweep_point['n_layers_quantum_block'],\n",
-    "        # wrapper_qlayer = pw.QLayerEmpty,\n",
-    "    )\n",
+    "    if sweep_point['n_layers_quantum_block'] > 0:\n",
+    "        # -- QUANTUM BLOCK -- #\n",
+    "        n_qubits = 12\n",
+    "        quantum_layer = q.circuit(\n",
+    "            n_qubits = n_qubits, \n",
+    "            device = \"default.qubit.torch\",\n",
+    "            device_options = {'shots': None},\n",
+    "            embedding = q.parts.AngleEmbedding, \n",
+    "            # embedding_ansatz = q.parts.Ansatz_11,\n",
+    "            block_ansatz = q.parts.Ansatz_11,\n",
+    "            final_ansatz = q.parts.Ansatz_11,\n",
+    "            measurement = q.parts.Measurement('Z', sweep_point['qubits_measurement']),\n",
+    "            # embedding_n_layers = 4,\n",
+    "            # different_inputs_per_layer = True,\n",
+    "            block_n_layers = sweep_point['n_layers_quantum_block'],\n",
+    "            # wrapper_qlayer = pw.QLayerEmpty,\n",
+    "        )\n",
+    "    else:\n",
+    "        quantum_layer = None\n",
     "\n",
     "    # -- MODEL -- #\n",
     "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
+    "            n_qubits_measured = 12 if sweep_point['qubits_measurement'] == 'all' else sweep_point['qubits_measurement']\n",
     "            self.fc1 = m.nn.Linear(228, 228//2)\n",
     "            self.fc2 = m.nn.Linear(228//2, 12)\n",
-    "            self.quantum_block = ''\n",
-    "            self.fc3 = m.nn.Linear(12, 1)\n",
+    "            self.quantum_layer = quantum_layer() if quantum_layer is not None else None\n",
+    "            self.fc4 = m.nn.Linear(n_qubits_measured, n_qubits_measured) \n",
+    "            self.fc5 = m.nn.Linear(n_qubits_measured, 1)\n",
     "\n",
     "        def forward(self, x):\n",
     "            x = m.torch.sigmoid(self.fc1(x))\n",
     "            x = m.torch.sigmoid(self.fc2(x))\n",
-    "            x = self.fc3(x)\n",
+    "            if self.quantum_layer is not None:\n",
+    "                x = self.quantum_layer(x)\n",
+    "            x = m.torch.sigmoid(self.fc4(x))\n",
+    "            x = self.fc5(x)\n",
     "            return x\n",
     "\n",
     "    model = Model()\n",
