--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -60,24 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 7, done.\u001b[K\n",
-      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 357 bytes | 357.00 KiB/s, done.\n",
+      "remote: Enumerating objects: 13, done.\u001b[K\n",
+      "remote: Counting objects: 100% (13/13), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+      "remote: Total 7 (delta 5), reused 7 (delta 5), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (7/7), 1.66 KiB | 282.00 KiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   8e1986d11..9142e78e6  main       -> origin/main\n",
-      "Updating 8e1986d11..9142e78e6\n",
+      "   78cd25208..33ebde504  main       -> origin/main\n",
+      "Updating 78cd25208..33ebde504\n",
       "Fast-forward\n",
-      " my_code/helper_classes.py | 9 \u001b[32m+++++++++\u001b[m\n",
-      " 1 file changed, 9 insertions(+)\n"
+      " Notebooks/sweep_12h_h_Xqm.ipynb | 195 \u001b[32m+++++++++++++++++++++++++++++++\u001b[m\u001b[31m---------\u001b[m\n",
+      " my_code/pytorch_model.py        |   2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " my_code/quantum_nodes.py        |   2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " 3 files changed, 155 insertions(+), 44 deletions(-)\n"
      ]
     }
    ],
@@ -88,45 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b9bd7d9e] data trained model\n",
-      " 21 files changed, 3035 insertions(+)\n",
-      " create mode 100644 checkpoints/0901/models/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/models/0901-4h_em_1qm_1.pth\n",
-      " create mode 100644 checkpoints/0901/notebooks/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/pdfs/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/pickled_objects/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/pickled_objects/0901-4h_em_1qm_1.pickle\n",
-      " create mode 100644 checkpoints/0901/plots/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/plots/0901-4h_em_1qm_losses_batches_1.png\n",
-      " create mode 100644 checkpoints/0901/plots/0901-4h_em_1qm_losses_epochs_1.png\n",
-      " create mode 100644 checkpoints/0901/plots/0901-4h_em_1qm_losses_epochs_validation_1.png\n",
-      " create mode 100644 checkpoints/0901/plots/0901-4h_em_1qm_validation_1.png\n",
-      " create mode 100644 checkpoints/0901/txts/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/txts/0901-4h_em_1qm_losses_batches_1.txt\n",
-      " create mode 100644 checkpoints/0901/txts/0901-4h_em_1qm_losses_epochs_1.txt\n",
-      " create mode 100644 checkpoints/0901/txts/0901-4h_em_1qm_losses_epochs_validation_1.txt\n",
-      " create mode 100644 checkpoints/0901/txts/0901-4h_em_1qm_model_str_1.txt\n",
-      " create mode 100644 checkpoints/0901/txts/0901-4h_em_1qm_validation_1.txt\n",
-      " create mode 100644 checkpoints/0901/versions/.gitkeep\n",
-      " create mode 100644 checkpoints/0901/versions/0901-12h_em_1qm.version\n",
-      " create mode 100644 checkpoints/0901/versions/0901-4h_em_1qm.version\n",
-      " create mode 100644 checkpoints/0901/versions/0901-8h_em_1qm.version\n",
-      "Enumerating objects: 22, done.\n",
-      "Counting objects: 100% (22/22), done.\n",
-      "Delta compression using up to 24 threads\n",
-      "Compressing objects: 100% (20/20), done.\n",
-      "Writing objects: 100% (20/20), 220.48 KiB | 5.80 MiB/s, done.\n",
-      "Total 20 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 2 local objects.\u001b[K\n",
-      "To github.com:raulconchello/peptide-QML.git\n",
-      "   915ca33c..b9bd7d9e  main -> main\n"
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
      ]
     }
    ],
