--- a/Notebooks/nomenclature.ipynb
+++ b/Notebooks/nomenclature.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ab_c_x.ipynb\n",
+    "# ab_c_d_x.ipynb\n",
     "\n",
     "a ->\n",
     "\n",
@@ -24,10 +24,16 @@
     "    - e: embedding\n",
     "    - em: embedding that requires an input longer than n_qubits\n",
     "\n",
+    "d ->\n",
+    "\n",
+    "    - _nothing_: AngleEmbedding\n",
+    "    - Am: AmplitudeEmbedding\n",
+    "\n",
     "x ->\n",
     "\n",
     "    - 1qm: 1-qubit measurement\n",
-    "    - Aqm: All-qubit measurement"
+    "    - Aqm: All-qubit measurement\n",
+    "\n"
    ]
   }
  ],
