--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -60,26 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 13, done.\u001b[K\n",
-      "remote: Counting objects: 100% (13/13), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
-      "remote: Total 7 (delta 5), reused 7 (delta 5), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (7/7), 1.66 KiB | 282.00 KiB/s, done.\n",
+      "remote: Enumerating objects: 14, done.\u001b[K\n",
+      "remote: Counting objects: 100% (14/14), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+      "remote: Total 8 (delta 5), reused 8 (delta 5), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (8/8), 4.52 KiB | 660.00 KiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   78cd25208..33ebde504  main       -> origin/main\n",
-      "Updating 78cd25208..33ebde504\n",
+      "   0eb02f8eb..5a822749a  main       -> origin/main\n",
+      "Updating 0eb02f8eb..5a822749a\n",
       "Fast-forward\n",
-      " Notebooks/sweep_12h_h_Xqm.ipynb | 195 \u001b[32m+++++++++++++++++++++++++++++++\u001b[m\u001b[31m---------\u001b[m\n",
-      " my_code/pytorch_model.py        |   2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " my_code/quantum_nodes.py        |   2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " 3 files changed, 155 insertions(+), 44 deletions(-)\n"
+      " Notebooks/_Connection.ipynb        |  60 \u001b[32m+++\u001b[m\u001b[31m------\u001b[m\n",
+      " Notebooks/nomenclature.ipynb       |  10 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " Notebooks/sweep_12h_h_Am_Xqm.ipynb | 246 \u001b[32m+++++++++++++++++++++++++++++++++++++\u001b[m\n",
+      " Notebooks/sweep_12h_h_Xqm.ipynb    | 177 \u001b[32m++++++++\u001b[m\u001b[31m------------------\u001b[m\n",
+      " my_code/quantum_nodes.py           |  16 \u001b[32m++\u001b[m\u001b[31m-\u001b[m\n",
+      " 5 files changed, 334 insertions(+), 175 deletions(-)\n",
+      " create mode 100644 Notebooks/sweep_12h_h_Am_Xqm.ipynb\n"
      ]
     }
    ],
