--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -7,14 +7,23 @@
    "outputs": [],
    "source": [
     "initial_path = 'peptide-QML'\n",
-    "initial_path = '..'"
+    "# initial_path = '..'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import sys\n",
@@ -42,7 +51,7 @@
     "    which_columns_are_numbers=[2]\n",
     "    )\n",
     "score_list = np.array(number_list)/100\n",
-    "vector_list = np.array([f.string_to_vector(string) for string in string_list]) \n",
+    "vector_list = np.array([f.string_to_numbers(string) for string in string_list]) \n",
     "\n",
     "# Create data object\n",
     "data = c.Data(\n",
@@ -67,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "(UUID('6742cd39-4836-4c7a-8ec3-580173caedab'),\n",
-       " torch.Size([397780, 228]),\n",
+       "(UUID('4b7d47c6-761c-4bb3-9608-a852b9cbb3c9'),\n",
+       " torch.Size([397780, 12]),\n",
        " torch.Size([397780, 1]),\n",
-       " torch.Size([44198, 228]),\n",
+       " torch.Size([44198, 12]),\n",
        " torch.Size([44198, 1]))"
       ]
      },
@@ -89,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.save(initial_path=initial_path, file_name='PET_SCORES_12')"
+    "data.save(initial_path=initial_path, file_name='PET_SCORES_12_Numbers')"
    ]
   },
   {
@@ -150,21 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PennyLane",
+   "display_name": "JL_Pennylane",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "name": "jl_pennylane"
   }
  },
  "nbformat": 4,
