--- a/Notebooks/tests.ipynb
+++ b/Notebooks/tests.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = {} \n",
+    "if x:\n",
+    "    print('True')\n",
+    "else:\n",
+    "    print('False')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,13 +513,146 @@
    "source": [
     "x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define a toy dataset (randomly generated)\n",
+    "num_samples = 1000\n",
+    "seq_length = 20\n",
+    "vocab_size = 1000\n",
+    "embedding_dim = 64\n",
+    "hidden_dim = 128\n",
+    "output_dim = 1  # Number of classes for classification\n",
+    "\n",
+    "class MyEmbeddingModel(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim):\n",
+    "        super(MyEmbeddingModel, self).__init__()\n",
+    "        \n",
+    "        # Define the embedding layer\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        \n",
+    "        # Define additional layers (e.g., LSTM, fully connected layers, etc.)\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # Forward pass through the embedding layer\n",
+    "        embedded = self.embedding(x)\n",
+    "        \n",
+    "        # Forward pass through the LSTM layer\n",
+    "        lstm_out, _ = self.lstm(embedded)\n",
+    "        \n",
+    "        # Apply the fully connected layer to get the final output\n",
+    "        output = self.fc(lstm_out[:, -1, :])  # Use the last time step's output\n",
+    "        \n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1000, 20])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Loss: 0.2981\n",
+      "Epoch [2/10], Loss: 0.2990\n",
+      "Epoch [3/10], Loss: 0.2245\n",
+      "Epoch [4/10], Loss: 0.1213\n",
+      "Epoch [5/10], Loss: 0.1454\n",
+      "Epoch [6/10], Loss: 0.0710\n",
+      "Epoch [7/10], Loss: 0.0348\n",
+      "Epoch [8/10], Loss: 0.0201\n",
+      "Epoch [9/10], Loss: 0.0229\n",
+      "Epoch [10/10], Loss: 0.0090\n",
+      "Training complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "# Generate random input data\n",
+    "X = torch.randint(0, vocab_size, (num_samples, seq_length)).int()\n",
+    "y = torch.randint(0, 2, (num_samples,)).view(-1, 1).float()\n",
+    "\n",
+    "# Create a DataLoader\n",
+    "batch_size = 32\n",
+    "dataset = TensorDataset(X, y)\n",
+    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "# Create an instance of MyEmbeddingModel\n",
+    "model = MyEmbeddingModel(vocab_size, embedding_dim, hidden_dim, output_dim)\n",
+    "\n",
+    "# Define loss and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Training loop\n",
+    "num_epochs = 10\n",
+    "for epoch in range(num_epochs):\n",
+    "    for batch_x, batch_y in dataloader:\n",
+    "        # Forward pass\n",
+    "        outputs = model(batch_x)\n",
+    "        \n",
+    "        # Compute the loss\n",
+    "        loss = criterion(outputs, batch_y)\n",
+    "        \n",
+    "        # Backpropagation and optimization\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    # Print loss for monitoring training progress\n",
+    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
+    "\n",
+    "print('Training complete!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JL_Pennylane",
+   "display_name": "PennyLane",
    "language": "python",
-   "name": "jl_pennylane"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -510,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
