--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -32,8 +32,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from my_code import helper_functions as f\n",
-    "from my_code import helper_classes as c\n",
-    "from my_code import pytorch_model as ptm"
+    "from my_code import helper_classes as c"
    ]
   },
   {
@@ -60,7 +59,7 @@
     "    split_options={\n",
     "        'test_size': 0.1, 'random_state': 42, 'shuffle': True\n",
     "    },\n",
-    "    tensors_type_x = 'float64',\n",
+    "    tensors_type_x = 'int',\n",
     "    tensors_type_y = 'float64',\n",
     "    description='PET Scores for 12 amino acids; no geometry fixed',\n",
     "    original_data_file='PET/PET_SCORES.csv',\n",
@@ -76,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "(UUID('4b7d47c6-761c-4bb3-9608-a852b9cbb3c9'),\n",
+       "(UUID('ddc287f5-506b-441f-a903-6f2f336e69cd'),\n",
        " torch.Size([397780, 12]),\n",
        " torch.Size([397780, 1]),\n",
        " torch.Size([44198, 12]),\n",
@@ -98,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.save(initial_path=initial_path, file_name='PET_SCORES_12_Numbers')"
+    "data.save(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int')"
    ]
   },
   {
@@ -107,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12')"
+    "new_data = c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int')"
    ]
   },
   {
@@ -118,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "UUID('6742cd39-4836-4c7a-8ec3-580173caedab')"
+       "UUID('ddc287f5-506b-441f-a903-6f2f336e69cd')"
       ]
      },
      "execution_count": 7,
@@ -132,22 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "tensor([[15, 10, 13,  ...,  3, 12,  9],\n",
+       "        [ 5, 10,  9,  ...,  7, 11,  1],\n",
+       "        [ 5,  5, 11,  ...,  2, 13, 12],\n",
        "        ...,\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.]])"
+       "        [ 4,  4, 12,  ..., 12,  0,  3],\n",
+       "        [18,  6,  4,  ...,  3,  0,  9],\n",
+       "        [ 8, 13, 13,  ..., 18,  8, 13]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,6 +161,18 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
