--- a/Notebooks/sweep_12h_e_Am_Xqm.ipynb
+++ b/Notebooks/sweep_12h_e_Am_Xqm.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers')"
+    "data = c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int')"
    ]
   },
   {
@@ -181,7 +181,8 @@
     "    #set sweep point\n",
     "    model.set_sweep_point(\n",
     "        sweep_uuid = sweep.uuid,\n",
-    "        sweep_point = sweep_point\n",
+    "        sweep_point = sweep_point,\n",
+    "        day=sweep.day\n",
     "    )\n",
     "\n",
     "    # -- TRAIN -- #\n",
@@ -245,18 +246,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
